--- a/styles.css
+++ b/styles.css
@@ -264,3 +264,38 @@ body {
     font-size: 14px;
     color: #ccc;
 }
+
+#fightArea {
+    width: 500px;
+    height: 200px;
+    background-color: #f0f0f0;
+    position: relative;
+    overflow: hidden;
+    border: 2px solid #000;
+}
+
+#dinosaur {
+    width: 40px;
+    height: 40px;
+    background-color: #666;
+    position: absolute;
+    bottom: 0;
+    left: 50px;
+}
+
+#ground {
+    width: 100%;
+    height: 20px;
+    background-color: #333;
+    position: absolute;
+    bottom: 0;
+}
+
+#obstacle {
+    width: 20px;
+    height: 40px;
+    background-color: #333;
+    position: absolute;
+    bottom: 0;
+    right: -20px;
+}
